[tool.poetry]
name = "styx"
version = "0.1.0"
description = "Mastercard File Transfer System"
authors = ["Chris Pressland <cpressland@bink.com>"]

[tool.poetry.dependencies]
python = "^3.9"
paramiko = "^2.7.2"
azure-storage-blob = "^12.8.1"
APScheduler = "^3.7.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
flake8 = "^3.9.2"
ptpython = "^3.0.19"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
